--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -2,17 +2,17 @@ body {
     padding-left: 15px;
 }
 h1 a, h2 a {
-    color: #C25100;
+    color: #eb0240;
     font-family: 'Lobster';
 }
 .page-header {
-    background-color: #C25100;
+    background-color: #49ed40;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
 
 .page-header h1, .page-header h1 a, .page-header h1 a:visited, .page-header h1 a:active {
-    color: #ffffff;
+    color: #0e1210;
     font-size: 36pt;
     text-decoration: none;
 }
@@ -26,7 +26,7 @@ h1, h2, h3, h4 {
 }
 
 .date {
-    color: #828282;
+    color: #eb0240;
 }
 
 .save {
@@ -38,7 +38,7 @@ h1, h2, h3, h4 {
 }
 
 .top-menu, .top-menu:hover, .top-menu:visited {
-    color: #ffffff;
+    color: #ebcf1a;
     float: right;
     font-size: 26pt;
     margin-right: 20px;
@@ -49,5 +49,5 @@ h1, h2, h3, h4 {
 }
 
 .post h2 a, .post h2 a:visited {
-    color: #000000;
+    color: #db4db8;
 }
